{
  "button.create": "Create",
  "button.delete": "Delete",
  "dialog.irreversible_action.title": "This action is irreversible !",
  "errors.unexpected.try_again": "Unexpected error, please try again",
  "language.en": "English",
  "language.fr": "French",
  "modal.playlist.create.palette_color_item.empty": "#######",
  "modals.color_scheme.button.create_color_scheme": "Create custom color scheme",
  "modals.color_scheme_create.button.choose_color": "Choose a color",
  "modals.color_scheme_create.dialog.color_picker.actions.accept": "Choose",
  "modals.color_scheme_create.dialog.color_picker.actions.reset": "Reset",
  "modals.color_scheme_create.dialog.color_picker.title": "Color Picker: {{label}}",
  "modals.color_scheme_create.input.color_scheme_name.error.invalid": "Enter a valid name",
  "modals.color_scheme_create.input.color_scheme_name.error.used": "This name is already used",
  "modals.color_scheme_create.input.color_scheme_name.placeholder": "Name of color scheme",
  "modals.color_scheme_create.model_item.primary.dark": "Primary dark",
  "modals.color_scheme_create.model_item.primary.light": "Primary light",
  "modals.color_scheme_create.model_item.primary.normal": "Primary normal",
  "modals.color_scheme_create.model_item.primary.opaque": "Primary opaque",
  "modals.color_scheme_create.model_item.secondary.dark": "Secondary dark",
  "modals.color_scheme_create.model_item.secondary.light": "Secondary light",
  "modals.color_scheme_create.model_item.secondary.normal": "Secondary normal",
  "modals.color_scheme_create.switch.dark_mode.helper_text": "Controls text colors. Dark mode will display light text over the background color you selected, otherwise it will be dark.",
  "modals.color_scheme_create.switch.dark_mode.label": "Use dark mode",
  "modals.playlist.create.input.name_playlist.placeholder": "Name your playlist",
  "modals.playlist.settings.button.delete_playlist": "Delete playlist",
  "modals.playlist.settings.dialog.confirm_delete.subtitle": "Are you certain you wish to delete the playlist: {{name}} ?",
  "modals.playlist.settings.input.rename_playlist.label": "Rename the playlist",
  "modals.playlist.settings.input.rename_playlist.placeholder": "Name your playlist",
  "routes.modals.color_scheme.header_title": "Color scheme",
  "routes.modals.color_scheme_create.header_title": "Custom color scheme",
  "routes.modals.language.header_title": "Language",
  "routes.stacks.settings.title": "Settings",
  "routes.tabs.home.header_title.period.afternoon": "Good afternoon",
  "routes.tabs.home.header_title.period.default": "Hello World",
  "routes.tabs.home.header_title.period.evening": "Good evening",
  "routes.tabs.home.header_title.period.morning": "Good morning",
  "routes.tabs.home.header_title.period.night": "Good night",
  "routes.tabs.home.tab_bar.button.title": "Home",
  "routes.tabs.library.header_title": "Your library",
  "routes.tabs.library.tab_bar.button.title": "Library",
  "screens.home.section.pinned_playlists.title": "Pinned playlists",
  "screens.home.section.recently_played.title": "Recently played",
  "screens.library.input.search.placeholder": "Search",
  "screens.playlist.button.add_tracks": "Add tracks",
  "screens.settings.clear_cache.button": "Clear",
  "screens.settings.clear_cache.label": "Clear app cache",
  "screens.settings.color_scheme.label": "Color scheme",
  "screens.settings.dialog.confirm_clear_cache.subtitle": "All your playlists and custom scheme will be deleted.",
  "screens.settings.language.label": "Language",
  "ui.dialog.confirm_dialog.cancel_action.title": "Cancel",
  "ui.player.controls.dialog.confirm_set.actions.accept": "Set",
  "ui.player.controls.dialog.confirm_set.input.minutes.error.too_low": "Enter a value greater than 0",
  "ui.player.controls.dialog.confirm_set.input.minutes.label": "Minutes",
  "ui.player.controls.dialog.confirm_set.subtitle": "Choose a time value in minutes after which the player will pause automatically.",
  "ui.player.controls.dialog.confirm_set.title": "Sleep Timer",
  "ui.player.track_view.label.unknown": "Unknown",
  "ui.playlist.swipe_action.pin": "Pin",
  "ui.playlist.swipe_action.unpin": "Unpin",
  "ui.playlist.track_count": "{{count}} track",
  "ui.playlist.track_count_plural": "{{count}} tracks",
  "ui.theme.schemes.theme_color_scheme.custom": "Custom",
  "ui.theme.schemes.theme_color_scheme.dark_blue": "Dark Blue",
  "ui.theme.schemes.theme_color_scheme.dark_purple": "Dark Purple",
  "ui.theme.schemes.theme_color_scheme.dark_red": "Dark Red",
  "ui.theme.schemes.theme_color_scheme.default": "Default",
  "ui.theme.schemes.theme_color_scheme.light_blue": "Light Blue",
  "ui.theme.schemes.theme_color_scheme.light_purple": "Light Purple",
  "ui.theme.schemes.theme_color_scheme.light_red": "Light Red",
  "ui.theme.schemes.theme_color_scheme.light_turquoise": "Light Turquoise"
}
