export const testIds = {
  button: {
    add_playlist: 'add-playlist',
    back: 'back',
    play: 'play',
    settings: 'settings'
  }
};
