{
  "language.en": "Anglais",
  "language.fr": "Français",
  "modals.color_scheme.button.create_color_scheme": "Créer un thème personnalisé",
  "modals.playlist.create.input.name_playlist.placeholder": "Nommer la playlist",
  "modals.playlist.settings.button.delete_playlist": "Supprimer playlist",
  "modals.playlist.settings.input.rename_playlist.label": "Renommer la playlist",
  "modals.playlist.settings.input.rename_playlist.placeholder": "Nommer la playlist",
  "routes.modals.color_scheme.header_title": "Thème",
  "routes.modals.language.header_title": "Langue",
  "routes.stacks.settings.title": "Paramètres",
  "routes.tabs.home.header_title.period.afternoon": "Bonne après-midi",
  "routes.tabs.home.header_title.period.default": "Hello World",
  "routes.tabs.home.header_title.period.evening": "Bonsoir",
  "routes.tabs.home.header_title.period.morning": "Bonjour",
  "routes.tabs.home.header_title.period.night": "Bonne nuit",
  "routes.tabs.home.tab_bar.button.title": "Home",
  "routes.tabs.library.header_title": "Votre bibliothèque",
  "routes.tabs.library.tab_bar.button.title": "Bibliothèque",
  "screens.home.section.recently_played.title": "Joué récemment",
  "screens.settings.clear_cache.button": "Vider",
  "screens.settings.clear_cache.label": "Vider le cache de l'app",
  "screens.settings.color_scheme.label": "Thème",
  "screens.settings.language.label": "Langue",
  "ui.player.track_view.label.unknown": "Inconnu",
  "ui.playlist.track_count": "{{count}} musique",
  "ui.playlist.track_count_plural": "{{count}} musiques",
  "screens.playlist.button.add_tracks": "Ajouter des musiques",
  "screens.library.input.search.placeholder": "Rechercher",
  "ui.playlist.swipe_action.pin": "Épingler",
  "ui.playlist.swipe_action.unpin": "Détacher",
  "routes.modals.color_scheme_create.header_title": "Thème personnalisé",
  "modals.color_scheme_create.model_item.primary.dark": "Primaire sombre",
  "modals.color_scheme_create.model_item.primary.light": "Primaire clair",
  "modals.color_scheme_create.model_item.primary.normal": "Primaire normal",
  "modals.color_scheme_create.model_item.primary.opaque": "Primaire opaque",
  "modals.color_scheme_create.model_item.secondary.dark": "Secondaire sombre",
  "modals.color_scheme_create.model_item.secondary.light": "Secondaire clair",
  "modals.color_scheme_create.model_item.secondary.normal": "Secondaire normal",
  "modal.playlist.create.palette_color_item.empty": "#######",
  "modals.color_scheme_create.dialog.color_picker.title": "Sélecteur de couleur: {{label}}",
  "modals.color_scheme_create.dialog.color_picker.actions.accept": "Choisir",
  "modals.color_scheme_create.dialog.color_picker.actions.reset": "Réinitialiser",
  "modals.color_scheme_create.input.color_scheme_name.placeholder": "Nom du thème",
  "modals.color_scheme_create.input.color_scheme_name.error.invalid": "Entrez un nom valide",
  "modals.color_scheme_create.input.color_scheme_name.error.used": "Ce nom est déjà utilisé",
  "modals.color_scheme_create.switch.dark_mode.label": "Utiliser le thème sombre",
  "modals.color_scheme_create.switch.dark_mode.helper_text": "Contrôle les couleurs de texte. Le thème sombre affiche du texte clair sur la couleur d'arrière-plan que vous avez choisi, autrement, une couleur sombre sera utilisée.",
  "ui.dialog.confirm_dialog.cancel_action.title": "Annuler",
  "errors.unexpected.try_again": "Erreur inattendue, veuillez réessayer",
  "button.create": "Créer",
  "modals.color_scheme_create.button.choose_color": "Choisir une couleur",
  "button.delete": "Supprimer",
  "screens.settings.dialog.confirm_clear_cache.subtitle": "Toutes vos playlist et votre thème personnalisé seront supprimés.",
  "ui.player.controls.dialog.confirm_set.actions.accept": "Régler",
  "ui.player.controls.dialog.confirm_set.input.minutes.error.too_low": "Entrez une valeur plus grande que 0",
  "ui.player.controls.dialog.confirm_set.input.minutes.label": "Minutes",
  "ui.player.controls.dialog.confirm_set.subtitle": "Choisissez une valeur de temps en minutes après laquelle le lecteur s'arrêtera automatiquement.",
  "ui.player.controls.dialog.confirm_set.title": "Sleep Timer",
  "dialog.irreversible_action.title": "Cette action est irréversible !",
  "modals.playlist.settings.dialog.confirm_delete.subtitle": "Êtes-vous certain de vouloir supprimer la playlist : {{name}} ?",
  "ui.theme.schemes.theme_color_scheme.custom": "Custom",
  "ui.theme.schemes.theme_color_scheme.default": "Défaut",
  "ui.theme.schemes.theme_color_scheme.dark_purple": "Pourpre Sombre",
  "ui.theme.schemes.theme_color_scheme.dark_blue": "Bleu Sombre",
  "ui.theme.schemes.theme_color_scheme.dark_red": "Rouge Sombre",
  "ui.theme.schemes.theme_color_scheme.light_purple": "Pourpre Clair",
  "ui.theme.schemes.theme_color_scheme.light_blue": "Bleu Clair",
  "ui.theme.schemes.theme_color_scheme.light_red": "Rouge Clair",
  "ui.theme.schemes.theme_color_scheme.light_turquoise": "Turquoise Clair",
  "screens.home.section.pinned_playlists.title": "Playlists épinglés"
}
