import { Track } from 'react-native-track-player';

export const trackList: Track[] = [
  {
    url: 'https://bigsoundbank.com/UPLOAD/mp3/0001.mp3',
    title: '0001',
    artist: 'bigsoundbank',
    album: 'while(1<2)',
    genre: 'Progressive House, Electro House',
    date: '2014-05-20T07:00:00+00:00',
    duration: 26,
    artwork: 'https://upload.wikimedia.org/wikipedia/en/1/1f/Taemin_-_Want.png'
  },
  {
    url: 'https://bigsoundbank.com/UPLOAD/mp3/0002.mp3',
    title: '0002',
    artist: 'bigsoundbank',
    album: 'while(1<2)',
    genre: 'Progressive House, Electro House',
    date: '2014-05-20T07:00:00+00:00',
    duration: 21,
    artwork:
      'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7fHeNxTBq9rrEyJT65uKgLbPKJ33CqisAqg&usqp=CAU'
  },
  {
    url: 'https://bigsoundbank.com/UPLOAD/mp3/0003.mp3',
    title: '0003',
    artist: 'bigsoundbank',
    album: 'while(1<2)',
    genre: 'Progressive House, Electro House',
    date: '2014-05-20T07:00:00+00:00',
    duration: 12,
    artwork:
      'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPvIIy4dQscOkch48EERs97hCxFkFxjVz1tA&usqp=CAU'
  }
];
