appId: com.TrackPlayer
---
- launchApp:
    clearState: true
# SEARCH
- runFlow: '../common/create-playlist.yml'
- tapOn: 'Library'
- tapOn: 'Search'
- inputText: 'test 1'
- assertVisible:
    text: 'test 1'
    above: '0 tracks'
    index: 1
- eraseText
- inputText: 'blahblah'
- assertNotVisible:
    text: 'test 1'
    above: '0 tracks'
    index: 1
- eraseText
- assertVisible:
    text: 'test 1'
    above: '0 tracks'
# RESET STATE
- hideKeyboard
- clearState
