appId: com.TrackPlayer
---
- tapOn:
    id: 'add-playlist'
- tapOn: 'Name your playlist'
- inputText: 'test 1'
- tapOn: 'CREATE'
